--- a/package.json
+++ b/package.json
@@ -9,12 +9,23 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@mantine/core": "^7.12.1",
+    "@mantine/hooks": "^7.12.1",
+    "dayjs": "^1.11.13",
+    "install": "^0.13.0",
+    "mongoose": "^8.5.4",
+    "next": "14.2.6",
+    "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "react-hot-toast": "^2.4.1",
+    "react-intersection-observer": "^9.13.0",
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
-    "postcss": "^8",
+    "postcss": "^8.4.41",
+    "postcss-preset-mantine": "^1.17.0",
+    "postcss-simple-vars": "^7.0.1",
     "tailwindcss": "^3.4.1"
   }
 }
