--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "axios": "^1.7.5",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "mongoose": "^8.5.4",
