--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.4.2",
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
+    "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
     "next": "14.2.6",
+    "next-auth": "^5.0.0-beta.20",
     "npm": "^10.8.2",
     "react": "^18",
     "react-dom": "^18",
