--- a/package.json
+++ b/package.json
@@ -9,9 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
+    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.2.6"
+    "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
     "postcss": "^8",
