--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next": "14.2.6",
     "next-auth": "^5.0.0-beta.20",
     "npm": "^10.8.2",
+    "razorpay": "^2.9.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
