--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "install": "^0.13.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
-    "next": "14.2.6",
     "next-auth": "^5.0.0-beta.20",
     "npm": "^10.8.2",
     "@fullcalendar/daygrid": "^6.1.15",
@@ -29,7 +28,7 @@
     "react-dom": "^18",
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.13.0",
-    "tabler-icons-react": "^1.56.0"
+    "tabler-icons-react": "^1.56.0",
     "sweetalert2": "^11.12.4"
   },
   "devDependencies": {
