--- a/package.json
+++ b/package.json
@@ -10,27 +10,33 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.4.2",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@fullcalendar/daygrid": "^6.1.15",
+    "@fullcalendar/interaction": "^6.1.15",
+    "@fullcalendar/react": "^6.1.15",
+    "@fullcalendar/timegrid": "^6.1.15",
     "@mantine/core": "^7.12.1",
     "@mantine/hooks": "^7.12.1",
+    "@mui/lab": "^6.0.0-beta.8",
+    "@mui/material": "^6.0.1",
     "axios": "^1.7.5",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
+    "next": "^14.2.7",
     "next-auth": "^5.0.0-beta.20",
     "npm": "^10.8.2",
     "razorpay": "^2.9.4",
-    "@fullcalendar/daygrid": "^6.1.15",
-    "@fullcalendar/interaction": "^6.1.15",
-    "@fullcalendar/react": "^6.1.15",
-    "@fullcalendar/timegrid": "^6.1.15",
-    "next": "^14.2.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-helmet": "^6.1.0",
     "react-hot-toast": "^2.4.1",
+    "react-icons": "^5.3.0",
     "react-intersection-observer": "^9.13.0",
-    "tabler-icons-react": "^1.56.0",
-    "sweetalert2": "^11.12.4"
+    "sweetalert2": "^11.12.4",
+    "tabler-icons-react": "^1.56.0"
   },
   "devDependencies": {
     "postcss": "^8.4.41",
