--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@mantine/hooks": "^7.12.1",
     "@mui/lab": "^6.0.0-beta.8",
     "@mui/material": "^6.0.1",
+    "@stripe/react-stripe-js": "^2.8.0",
+    "@stripe/stripe-js": "^4.4.0",
     "axios": "^1.7.5",
     "dayjs": "^1.11.13",
     "install": "^0.13.0",
