--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "@mui/material": "^6.0.1",
     "@stripe/react-stripe-js": "^2.8.0",
     "@stripe/stripe-js": "^4.4.0",
+    "@tabler/icons-react": "^3.14.0",
     "axios": "^1.7.5",
     "dayjs": "^1.11.13",
+    "icons-react": "^3.7.1",
     "install": "^0.13.0",
     "mongodb": "^6.8.0",
     "mongoose": "^8.5.4",
